# yanhu-game-sessions

./: .gitignore  CLAUDE.md  DESKTOP_UX_GATE_SUMMARY.md  E2E_SETUP.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_v0.1.0.md  SMOKE_TEST_CHECKLIST.md  TESTING.md  VERIFY_CLEANUP_SUMMARY.md  config.example.yaml  pyproject.toml  yanhu.spec
.claude/skills/yanhu-kickoff/: SKILL.md
.claude/skills/yanhu-pr-review/: SKILL.md
.claude/skills/yanhu-run-pipeline/: SKILL.md
.claude/skills/yanhu-verify/: README.md  SKILL.md  run_with_env.py
.github/workflows/: build-desktop.yml  ci.yml  e2e-tests.yml
docs/: BUILD.md  DEPENDENCY_MATRIX.md  PROJECT_PLAN.md  PROJECT_UPDATE.md  RUNBOOK.md
queue/: pending.jsonl  state.json
scripts/: README.md  build_desktop.bat  build_desktop.sh  ci_rehearsal_desktop.sh  runtime_selfcheck.py  test_launcher_dev.sh
src/yanhu/: __init__.py  aligner.py  analyzer.py  app.py  asr_registry.py  claude_client.py  cli.py  composer.py  extractor.py  ffmpeg_utils.py  gemini_client.py  keystore.py  launcher.py  manifest.py  metrics.py  open_ocr.py  progress.py  segmenter.py  session.py  symbol_binder.py  transcriber.py  verify.py  watcher.py
tests/: __init__.py  test_aligner.py  test_analyzer.py  test_app.py  test_asr_download_progress.py  test_asr_error_aggregation.py  test_asr_registry.py  test_asr_ux_messages.py  test_claude_client.py  test_composer.py  test_emoji_binding.py  test_emoji_extraction.py  test_extractor.py  test_ffmpeg_utils.py  test_ffprobe_discovery.py  test_gemini_client.py  test_highlights_fallback.py  test_job_detail_status_render.py  test_job_status_persistence.py  test_job_status_ui_consolidation.py  test_keystore.py  test_launcher.py  test_manifest.py  test_metrics.py  test_mode_indicator.py  test_naming_p3.py  test_no_key_mode.py  test_per_ocr_symbol_binding.py  test_placeholder.py  test_presets.py  test_progress.py  test_progress_early_session_id.py  test_progress_reconcile.py  test_progress_reconcile_integration.py  test_progress_ui.py  test_quit_server_fix.py  test_runtime_selfcheck.py  test_segment_strategy.py  test_segmenter.py  test_session.py  (+17 more)
tests/e2e/: README.md  test_progress_ui.py
