[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yanhu-game-sessions"
version = "0.1.0"
description = "Post-game replay companion: video segmentation, analysis, and timeline generation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yanhu Team" }
]
dependencies = [
    "click>=8.0",
    "ffmpeg-python>=0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
cloud = [
    "anthropic>=0.18",
    "openai>=1.0",
]

[project.scripts]
yanhu = "yanhu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yanhu"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
