[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yanhu-game-sessions"
version = "0.1.0"
description = "Post-game replay companion: video segmentation, analysis, and timeline generation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yanhu Team" }
]
dependencies = [
    "click>=8.0",
    "ffmpeg-python>=0.2",
    "pyyaml>=6.0",
    "anthropic>=0.18",
    "emoji>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
cloud = [
    "openai>=1.0",
]
asr = [
    "faster-whisper>=1.0",
    "tiktoken>=0.5",
    "regex>=2023.0",
    "safetensors>=0.4",
]
watcher = [
    "watchdog>=3.0",
]
app = [
    "flask>=3.0",
    "markdown>=3.5",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
yanhu = "yanhu.cli:main"
yanhu-desktop = "yanhu.launcher:run_launcher"

[tool.hatch.build.targets.wheel]
packages = ["src/yanhu"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# HTML templates in strings can have long lines
"src/yanhu/app.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
